starting CTCI