@@ -1,6 +1,7 @@
 package in.solve.problems.companies.chess;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -19,17 +20,17 @@ public class HorseStrategy implements PieceStrategy {
   @Override
   public List<Move> possibleMoves(MovementFactory movementFactory) {
     final List<Move> allMoves = new ArrayList<>();
-    final Move forwardLeft = Move.jumpingMove(List.of(movementFactory.forwardMovement(), movementFactory.forwardMovement(), movementFactory.leftMovement()));
-    final Move forwardRight = Move.jumpingMove(List.of(movementFactory.forwardMovement(), movementFactory.forwardMovement(), movementFactory.rightMovement()));
+    final Move forwardLeft = Move.jumpingMove(Arrays.asList(movementFactory.forwardMovement(), movementFactory.forwardMovement(), movementFactory.leftMovement()));
+    final Move forwardRight = Move.jumpingMove(Arrays.asList(movementFactory.forwardMovement(), movementFactory.forwardMovement(), movementFactory.rightMovement()));
 
-    final Move backwardLeft = Move.jumpingMove(List.of(movementFactory.backwardMovement(), movementFactory.backwardMovement(), movementFactory.leftMovement()));
-    final Move backwardRight = Move.jumpingMove(List.of(movementFactory.backwardMovement(), movementFactory.backwardMovement(), movementFactory.rightMovement()));
+    final Move backwardLeft = Move.jumpingMove(Arrays.asList(movementFactory.backwardMovement(), movementFactory.backwardMovement(), movementFactory.leftMovement()));
+    final Move backwardRight = Move.jumpingMove(Arrays.asList(movementFactory.backwardMovement(), movementFactory.backwardMovement(), movementFactory.rightMovement()));
 
-    final Move leftForward = Move.jumpingMove(List.of(movementFactory.leftMovement(), movementFactory.leftMovement(), movementFactory.forwardMovement()));
-    final Move leftBackward = Move.jumpingMove(List.of(movementFactory.leftMovement(), movementFactory.leftMovement(), movementFactory.backwardMovement()));
+    final Move leftForward = Move.jumpingMove(Arrays.asList(movementFactory.leftMovement(), movementFactory.leftMovement(), movementFactory.forwardMovement()));
+    final Move leftBackward = Move.jumpingMove(Arrays.asList(movementFactory.leftMovement(), movementFactory.leftMovement(), movementFactory.backwardMovement()));
 
-    final Move rightForward = Move.jumpingMove(List.of(movementFactory.rightMovement(), movementFactory.rightMovement(), movementFactory.forwardMovement()));
-    final Move rightBackward = Move.jumpingMove(List.of(movementFactory.rightMovement(), movementFactory.rightMovement(), movementFactory.backwardMovement()));
+    final Move rightForward = Move.jumpingMove(Arrays.asList(movementFactory.rightMovement(), movementFactory.rightMovement(), movementFactory.forwardMovement()));
+    final Move rightBackward = Move.jumpingMove(Arrays.asList(movementFactory.rightMovement(), movementFactory.rightMovement(), movementFactory.backwardMovement()));
 
     allMoves.add(forwardLeft);
     allMoves.add(forwardRight);
